# serializer version: 1
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Zählerstand',
      'meter_number': '12345678',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2026-04-04T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9490.152',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (aktueller 30-Tage-Trend)',
      'from': '2026-03-05T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 9.6,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-04-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '288.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (vorheriger 30-Tage-Trend)',
      'from': '2026-02-03T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 2.6,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '78.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Teilnahmefaktor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energiegemeinschaft Einspeisung L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '105.550991',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energiegemeinschaft Einspeisung L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-03-01T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '78.63703',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energiegemeinschaft Einspeisung L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '198.805221',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energielieferant Einspeisung L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '172.371779',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energielieferant Einspeisung L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '148.454009',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energielieferant Einspeisung L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-03-01T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123.25697',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Typ',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Gem.Erz. / Erzeugung',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Energielieferant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OeMAG Abwicklungsstelle für Ökostrom AG',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (aktueller Jahres-Trend)',
      'from': '2025-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 12.34278904109589,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-31T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4505.118',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (vorheriger Jahres-Trend)',
      'from': '2024-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 12.12066575342466,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2025-03-30T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4424.043',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Teilnahmefaktor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '55',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energiegemeinschaft Bezug L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energiegemeinschaft Bezug L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '299.285515',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energiegemeinschaft Bezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '286.329492',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energielieferant Netzbezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '658.438508',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'active',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energielieferant Netzbezug L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energielieferant Netzbezug L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '795.080485',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Zählerstand',
      'meter_number': '9876543',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2023-02-04T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '43698.215',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (aktueller 30-Tage-Trend)',
      'from': '2026-03-05T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 10.5,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-04-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '315.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (vorheriger 30-Tage-Trend)',
      'from': '2026-02-03T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 19.86666666666667,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '596.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Teilnahmefaktor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energiegemeinschaft Bezug L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energiegemeinschaft Bezug L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energiegemeinschaft Bezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energielieferant Netzbezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energielieferant Netzbezug L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energielieferant Netzbezug L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Typ',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'EEG 7ngem',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Energielieferant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'easy green energy GmbH & Co KG',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (aktueller Jahres-Trend)',
      'from': '2025-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 11.458,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-31T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4182.17',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (vorheriger Jahres-Trend)',
      'from': '2024-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 10.37962739726027,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2025-03-30T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3788.564',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Meter reading',
      'meter_number': '12345678',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2026-04-04T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9490.152',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Monthly export trend (current period)',
      'from': '2026-03-05T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 9.6,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-04-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '288.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Monthly export trend (previous period)',
      'from': '2026-02-03T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 2.6,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '78.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Contribution factor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energy community export L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '105.550991',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energy community export L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-03-01T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '78.63703',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energy community export L2 (last month)',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '198.805221',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Supplier export L2 (last month)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '172.371779',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Supplier export L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '148.454009',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Supplier export L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-03-01T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123.25697',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Gem.Erz. / Erzeugung',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Supplier',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OeMAG Abwicklungsstelle für Ökostrom AG',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Yearly export trend (current period)',
      'from': '2025-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 12.34278904109589,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-31T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4505.118',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Yearly export trend (previous period)',
      'from': '2024-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 12.12066575342466,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2025-03-30T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4424.043',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Contribution factor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '55',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energy community import L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energy community import L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '299.285515',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energy community import L2 (last month) ',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '286.329492',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Supplier import L2 (last month)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-03-19T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '658.438508',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'active',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Supplier import L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Supplier import L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26T00:00:00',
          'to': '2026-04-03T23:59:59',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '795.080485',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Meter reading',
      'meter_number': '9876543',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2023-02-04T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '43698.215',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Monthly import trend (current period)',
      'from': '2026-03-05T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 10.5,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-04-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '315.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Monthly import trend (previous period)',
      'from': '2026-02-03T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 19.86666666666667,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-04T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '596.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Contribution factor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energy community import L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energy community import L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energy community import L2 (last month) ',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Supplier import L2 (last month)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Supplier import L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Supplier import L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'EEG 7ngem',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Supplier',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'easy green energy GmbH & Co KG',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Yearly import trend (current period)',
      'from': '2025-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 11.458,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-03-31T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4182.17',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Yearly import trend (previous period)',
      'from': '2024-03-31T00:00:00',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 10.37962739726027,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2025-03-30T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3788.564',
  })
# ---
